--- a/roles/configure_repos/tasks/main.yml
+++ b/roles/configure_repos/tasks/main.yml
@@ -1,34 +1,35 @@
-- name: Check if {{ admin_repo_dir }} exists
+- name: Check if {{ docker_services_dir }} exists
   ansible.builtin.stat:
-    path: "{{ admin_repo_dir }}"
-  register: admin_repo_stat
+    path: "{{ docker_services_dir }}"
+  register: docker_repo_stat
 
-- name: Create {{ admin_repo_dir }}
+- name: Create {{ docker_services_dir }}
   file:
-    path: "{{ admin_repo_dir }}"
+    path: "{{ docker_services_dir }}"
     state: directory
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: '0700'
-  when: not admin_repo_stat.stat.exists
+  when: not docker_repo_stat.stat.exists
 
-- name: Cloning {{ admin_repo_url }} to {{ admin_repo_dir }}
+- name: Cloning {{ docker_services_url }} to {{ docker_services_dir }}
   ansible.builtin.git:
-    repo: "{{ admin_repo_url }}"
-    dest: "{{ admin_repo_dir }}"
+    repo: "{{ docker_services_url }}"
+    dest: "{{ docker_services_dir }}"
     key_file: "/home/{{ user }}/.ssh/id_ed25519"
-    version: dev-1.8.0
     accept_hostkey: yes
     update: yes
     clone: yes
+    force: yes
   become: false
+  when: not docker_repo_stat.stat.exists
 
-- name: Adjusting permissions of {{ admin_repo_dir }}
+- name: Adjusting permissions of {{ docker_services_dir }}
   file:
-    path: "{{ admin_repo_dir }}"
+    path: "{{ docker_services_dir }}"
     state: directory
     owner: "{{ user }}"
     group: "{{ user }}"
     recurse: yes
     mode: '0700'
-  when: not admin_repo_stat.stat.exists
+  when: not docker_repo_stat.stat.exists
