--- a/roles/configure_bitwarden_secrets/tasks/main.yml
+++ b/roles/configure_bitwarden_secrets/tasks/main.yml
@@ -1,9 +1,3 @@
-
-
-- name: Update apt package index
-  ansible.builtin.apt:
-    update_cache: yes
-
 - name: Install bitwarden secrets manager dependencies
   ansible.builtin.apt:
     name:
@@ -11,20 +5,15 @@
       - jq
     state: present
 
-- name: Ensure /home/{{ user }}/Documents exists
-  file:
-    path: "/home/{{ user }}/Documents"
-    state: directory
-
 - name: Downloading Bitwarden Secrets Manager CLI
   get_url:
     url: https://github.com/bitwarden/sdk/releases/download/bws-v0.5.0/bws-x86_64-unknown-linux-gnu-0.5.0.zip
-    dest: "/home/{{ user }}/Documents/bws.zip"
+    dest: "/home/{{ user }}/workspace/bws.zip"
     mode: '0600'
 
 - name: Unzipping Bitwarden Secrets Manager Archive
   unarchive:
-    src: "/home/{{ user }}/Documents/bws.zip"
+    src: "/home/{{ user }}/workspace/bws.zip"
     dest: /usr/bin
     remote_src: yes
 
@@ -39,14 +28,6 @@
   ansible.builtin.stat:
     path: "{{ secrets_dir }}/.bws-token.sh"
   register: bws_secret_present
-
-- name: Ensure {{ secrets_dir }} exists
-  file:
-    path: "{{ secrets_dir }}"
-    state: directory
-    owner: root
-    group: root
-    mode: '755'
 
 - name: Downloading Biwarden Secrets Access Key
   ansible.builtin.copy:
