--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,6 +6,15 @@
   timezone:
     name: "America/Chicago"
 
+- name: Ensure base directories exist
+  file:
+    path: "{{ item.location }}"
+    state: directory
+    owner: "{{ item.owner }}"
+    group: "{{ item.group }}"
+    mode: "{{ item.mode }}"
+  loop: "{{ data_directories }}"
+
 - name: Setup SSH and Fail2Ban
   import_tasks: ssh.yml
 
