--- a/roles/configure_lets_encrypt_cloudflare/tasks/main.yml
+++ b/roles/configure_lets_encrypt_cloudflare/tasks/main.yml
@@ -1,10 +1,7 @@
-- name: Ensure {{ secrets_dir }} exists
-  file:
-    path: "{{ secrets_dir }}"
-    state: directory
-    owner: "root"
-    group: "root"
-    mode: "700"
+- name: Check if cloudflare API token needs installed
+  ansible.builtin.stat:
+    path: "{{ secrets_dir }}/cloudflare.ini"
+  register: cloudflare_auth_token
 
 - name: Deploy cloudflare.ini for let's encrypt
   ansible.builtin.template:
@@ -13,6 +10,7 @@
     owner: root
     group: "root"
     mode: '0500'
+  when: not cloudflare_auth_token.stat.exists
 
 - name: Install packages for certbot and cloudflare integration
   ansible.builtin.apt:
@@ -21,19 +19,10 @@
       - python3-pip
     state: present
 
-- name: Ensure {{ scripts_dir }} exists
-  file:
-    path: "{{ scripts_dir }}"
-    state: directory
-    owner: "root"
-    group: "root"
-    mode: "700"
-
-- name: Deploy let's encrypt scripts for domains
+- name: Deploy let's encrypt script for {{ cert_domain }}
   ansible.builtin.template:
     src: "issue-certificate.sh.j2"
-    dest: "{{ scripts_dir }}/issue-{{ item.domain }}.sh"
+    dest: "{{ scripts_dir }}/issue-{{ cert_domain }}.sh"
     owner: root
     group: "root"
     mode: '0500'
-  loop: "{{ certificates }}"
