Updated defaults to include tailscale directories

--- a/roles/configure_jellyfin/defaults/main.yml
+++ b/roles/configure_jellyfin/defaults/main.yml
@@ -14,6 +14,9 @@ jellyfin_data_mounts:
   - location: "{{ data_dir }}/jellyfin"
     owner: "media"
     mode: '0700'
+  - location: "{{ data_dir }}/ts/media"
+    owner: "root"
+    mode: '0700'
   - location: "/mnt/transcodes"
     owner: "media"
     mode: '0700'
