--- a/roles/configure_vaultwarden/tasks/main.yml
+++ b/roles/configure_vaultwarden/tasks/main.yml
@@ -1,11 +1,3 @@
-- name: Ensure {{ root_install_dir }} exists
-  file:
-    path: "{{ root_install_dir }}"
-    state: directory
-    owner: "root"
-    group: "{{ user }}"
-    mode: '0750'
-
 - name: Ensure Vaultwarden accounts exist
   ansible.builtin.user:
     name: "{{ item.name }}"
@@ -32,17 +24,22 @@
     group: "{{ user }}"
     mode: '0400'
 
-- name: Enable Vaultwarden borg backups
+- name: Enable Vaultwarden Backups
   include_role:
     name: configure_borg_backup
     public: true
   vars:
+    # Borg - Encryption
     borg_src_dir: "{{ data_dir }}/bitwarden"
     borg_repo_dir: "{{ backup_dir }}/borg-bitwarden"
-    borg_bws_secret_uid: 
+    borg_bws_secret_uid: "{{ lookup('bitwarden_field', 'bws_secret_uid', 'borg - vaultwarden') }}"
     borg_script_loc: "{{ scripts_dir }}/backup-borg-vaultwarden.sh"
-    idrive_e2_target: "test_e2_url"
-    idrive_e2_bucket: "vaultwarden-bucket"
+
+    # IDrive E2 - Offsite Storage
+    idrive_e2_target: "idrive-e2-vaultwarden"
+    idrive_e2_bucket: "borg-bitwarden"
+    idrive_e2_access_key_id: "{{ lookup('bitwarden_field', 'rclone_access_key_id', 'borg - vaultwarden') }}"
+    idrive_e2_secret_access_key: "{{ lookup('bitwarden_field', 'rclone_secret_access_key', 'borg - vaultwarden') }}"
 
 - name: Deploy Vaultwarden Let's Encrypt
   include_role:
