Added checks to bws and rclone to prevent duplicate installs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,5 @@ inventory=./inventory/all.ini
 lookup_plugins=./lookup_plugins
 vault_password_file = ./vault-pass.sh
 host_key_checking = False
+callbacks_enabled = timer, profile_tasks, profile_roles
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
