--- a/host_vars/nexus.yml
+++ b/host_vars/nexus.yml
@@ -1,5 +1,6 @@
 ansible_become_pass: "{{ lookup('bitwarden_password', 'nexus_linux_user_password') }}"
 user_password: "{{ lookup('bitwarden_field', 'hash', 'nexus_linux_user_password') }}"
+wireguard_ip: "10.0.0.1"
 
 # Common Overrides
 hostname: "nexus"
