--- a/inventory/all.ini
+++ b/inventory/all.ini
@@ -3,3 +3,5 @@ localhost ansible_connection=local
 
 [servers]
 nexus ansible_host="{{ nexus_ip_address }}"
+ns ansible_host="{{ ns_ip_address }}"
+code ansible_host="{{ code_ip_address }}"
