--- a/setup-all-in-one.yml
+++ b/setup-all-in-one.yml
@@ -1,6 +1,7 @@
 - hosts: nexus
   become: true
   roles:
+    - configure_tailscale
     - configure_jellyfin
     - configure_nextcloud
     - configure_vaultwarden
