--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,6 +6,14 @@
   timezone:
     name: "America/Chicago"
 
+- name: Install common packages
+  ansible.builtin.apt:
+    name:
+      - cron
+      - tmux
+      - vim
+    state: present
+
 - name: Ensure base directories exist
   file:
     path: "{{ item.location }}"
