--- a/roles/common/tasks/git.yml
+++ b/roles/common/tasks/git.yml
@@ -29,9 +29,15 @@
     name: user.name
     value: "{{ git_name_v }}"
     scope: global
+  become: no
 
 - name: Set user.email to {{ git_email_v }}
   git_config:
     name: user.email
     value: "{{ git_email_v }}"
     scope: global
+  become: no
+
+- name: Disbling file mode checks within git
+  command: git config core.fileMode false
+  become: no
