Added Pinole to setup-all-in-one profile

--- a/setup-all-in-one.yml
+++ b/setup-all-in-one.yml
@@ -4,6 +4,7 @@
     - configure_jellyfin
     - configure_nextcloud
     - configure_vaultwarden
+    - configure_pihole
     - configure_md_raid
     - configure_iptables
 
