Added auto enable of mdadm services and iptables

--- a/roles/configure_iptables/tasks/main.yml
+++ b/roles/configure_iptables/tasks/main.yml
@@ -21,3 +21,6 @@
     owner: "root"
     group: "root"
     mode: '0500'
+
+- name: Configuring IPTables
+  command: "{{ scripts_dir }}/iptables-setup.sh"
