--- a/inventory/all.ini
+++ b/inventory/all.ini
@@ -3,5 +3,4 @@ localhost ansible_connection=local
 
 [servers]
 nexus ansible_host="{{ nexus_ip_address }}"
-ns ansible_host="{{ ns_ip_address }}"
-code ansible_host="{{ code_ip_address }}"
+vpn ansible_host="{{ vpn_ip_address }}"
